# comfyui-NanoBananaPro_3DeLAB

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report_en.md  bug_report_es.md  feature_request_en.md  feature_request_es.md
Workflows/: api_nano_banana_pro_3delab.json
Workflows Comfyui/: api_nano_banana_pro_3delab.json
js/: auto_select_extracted_frame.js  nano_banana_pro.js  scribble_editor.js  video_preview.js
js/docs/: GeminiNanoBananaPro.md  GeminiVeo31VideoGenerator.md  LoadScribbleImage.md
js/docs/GeminiNanoBananaPro/: es.md
js/docs/GeminiVeo31VideoGenerator/: es.md
js/docs/LoadScribbleImage/: es.md
