[project]
name = "NanoBananaPro3_Direct"
description = "Nano Banana 2 y Veo 3.1 Models Nodes for ComfyUI. image generation: img2img | txt2img | 14 references img2img | inpaint | outpaint | background swap / video generation: img2vid | txt2vid | inpaint | remove | extend | first last frame | 3 reference img2vid. This nodes uses the Gemini API_KEY, the Vertex AI SERVICE_ACCOUNT_JSON and the name of a bucket in Google Cloud Storage to store images and videos for Vertex ai requirements."
version = "1.4.1"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
dependencies = [
    # Static dependencies can go here if needed, but we use dynamic
    # "comfyui-frontend-package<=1.21.6" # Example
]
classifiers = [
    # For OS-independent nodes (works on all operating systems)
    "Operating System :: OS Independent",

    # OR for OS-specific nodes, specify the supported systems:
    "Operating System :: Microsoft :: Windows",  # Windows specific
    "Operating System :: POSIX :: Linux",  # Linux specific
    "Operating System :: MacOS",  # macOS specific

    # GPU Accelerator support. Pick the ones that are supported by your extension.
    "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
    "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
    "Environment :: GPU :: Intel Arc",      # Intel Arc support
    "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
    "Environment :: GPU :: Apple Metal",    # Apple Metal support
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/PATAGONIABIM/comfyui-NanoBananaPro_3DeLAB"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/PATAGONIABIM/comfyui-NanoBananaPro_3DeLAB/blob/main/README.md"
"Bug Tracker" = "https://github.com/PATAGONIABIM/comfyui-NanoBananaPro_3DeLAB/issues"

[tool.comfy]
PublisherId = "nenu"
DisplayName = "NanoBanana&Veo_Suite_3DeLAB"
Icon = "https://raw.githubusercontent.com/PATAGONIABIM/comfyui-NanoBananaPro_3DeLAB/main/icon.png"
# Banner = "" # No banner provided yet
